Source/WebKit/blackberry: [BlackBerry] Suppress non DRT JS Console output. https://bugs.webkit.org/show_bug.cgi?id=94058

Patch by Rob Buis <rbuis@rim.com> on 2012-08-16
Reviewed by Yong Li.
Reviewed internally by Ming Xie.

Some actual test results show JS Console showing up twice, for
instance traversal/moz-bug559526.html. Only print the DRT specific
Console message.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::addMessageToConsole):

Tools: [BlackBerry] Update format of JS console message to keep consistent with other ports.
https://bugs.webkit.org/show_bug.cgi?id=94058

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-08-16
Reviewed by Yong Li.
Reviewed internally by George Staikos.

1. Remove line number if it's zero.
2. Print only file name for "file://" URL.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(BlackBerry::WebKit::DumpRenderTree::addMessageToConsole):

Canonical link: https://commits.webkit.org/112033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125778 268f45cc-cd09-0410-ab3c-d52691b4dbfc